--- a/css/navbar.css
+++ b/css/navbar.css
@@ -49,8 +49,8 @@ nav {
     .navlogo {
         border-bottom: var(--secondary) 3px solid;
         img {
-            width: 50px;
-            height: 50px;
+            width: clamp(10px, 5vw, 50px);
+            height: auto;
             /* inset: 0; */
         }
     }
